Fixes z-index of expanded watch

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -720,7 +720,7 @@ footer {
 	flex: auto 1 1;
 	position: relative;
 	cursor: pointer;
-	z-index: 1;
+	z-index: 5;
 	transition: transform 250ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 	&::after {
